fix: fix overflow

--- a/pages/main/styles/page_sections/_about-the-shelter.scss
+++ b/pages/main/styles/page_sections/_about-the-shelter.scss
@@ -8,6 +8,8 @@
     align-items: center;
     background: #ffffff;
 
+    margin: auto;
+
     @media (max-width: $breakpoint-tablet) {
         flex-direction: column-reverse;
         padding-top: 80px;
