--- a/pages/main/styles/page_sections/_pets.scss
+++ b/pages/main/styles/page_sections/_pets.scss
@@ -10,6 +10,8 @@
     flex-direction: column;
     gap: 60px;
 
+    margin: auto;
+
     h3 {
         text-align: center;
     }
