--- a/pages/main/styles/page_sections/_start-screen.scss
+++ b/pages/main/styles/page_sections/_start-screen.scss
@@ -5,6 +5,8 @@
     background: url(../../../assets/images/start-screen-background.jpg);
     background: radial-gradient(100% 215.42% at 0% 0%, #5b483a 0%, #262425 100%);
 
+    margin: auto;
+
     @media (max-width: $breakpoint-tablet) {
         padding: 30px 30px 0 30px;
     }
